# olusoki

./: .gitignore
project/: pyproject.toml
project/app/: config.py  main.py
